--- a/debian/templates/control.image-dbg.latest.in
+++ b/debian/templates/control.image-dbg.latest.in
@@ -1,8 +1,6 @@
-Package: linux-image@localversion@-dbgsym
-Depends: linux-image-@abiname@@localversion@-dbgsym, ${misc:Depends}
+Package: linux-image@localversion@-dbg
+Depends: linux-image-@abiname@@localversion@-dbg, ${misc:Depends}
 Provides: linux-latest-image-dbg
-Section: debug
-Priority: extra
-Description: Debug symbols for Linux @flavour@ configuration (meta-package)
+Description: Debugging symbols for Linux @flavour@ configuration (meta-package)
  This package depends on the detached debugging symbols for the latest
  Linux kernel @flavour@ configuration.
