--- a/debian/templates/lintian-overrides.source.in
+++ b/debian/templates/lintian-overrides.source.in
@@ -1,1 +1,1 @@
-linux-latest source: dbg-package-missing-depends linux-image-@flavour@-dbgsym
+linux-latest source: dbg-package-missing-depends linux-image-@flavour@-dbg
