Import Debian version 105
linux-latest (105) unstable; urgency=medium

  * Update to 4.19.0-5

linux-latest (104) unstable; urgency=medium

  * Update to 4.19.0-4

linux-latest (103) unstable; urgency=medium

  * Update to 4.19.0-3

linux-latest (102) unstable; urgency=medium

  * Update to 4.19.0-2

linux-latest (101) unstable; urgency=medium

  * Update to 4.19.0-1

linux-latest (100) unstable; urgency=medium

  [ Romain Perier ]
  * Update to 4.18.0-3

linux-latest (99) unstable; urgency=medium

  * Update to 4.18.0-2

linux-latest (98) unstable; urgency=medium

  * Update to 4.18.0-1

linux-latest (97) unstable; urgency=medium

  * Update to 4.17.0-3

linux-latest (96) unstable; urgency=medium

  [ Romain Perier ]
  * Update to 4.17.0-2

linux-latest (95) unstable; urgency=medium

  [ Romain Perier ]
  * Update to 4.17.0-1

linux-latest (94) unstable; urgency=medium

  [ Ben Hutchings ]
  * Substitute source package name in lintian-overrides
  * Change binary package names to include any source package name suffix
  * Don't build redundant linux-doc, linux-source, linux-tools packages

  [ Salvatore Bonaccorso ]
  * Update to 4.16.0-2

linux-latest (93) unstable; urgency=medium

  * Update to 4.16.0-1

linux-latest (92) unstable; urgency=medium

  * Update to 4.15.0-3

linux-latest (91) unstable; urgency=medium

  [ Ben Hutchings ]
  * debian/control: Point Vcs URLs to Salsa

  [ Salvatore Bonaccorso ]
  * Update to 4.15.0-2

linux-latest (90) unstable; urgency=medium

  * Update to 4.15.0-1

linux-latest (89) unstable; urgency=medium

  * Update to 4.14.0-3

linux-latest (88) unstable; urgency=medium

  * Update to 4.14.0-2

linux-latest (87) unstable; urgency=medium

  * linux-image: Add back-dated NEWS for vsyscall change in Linux 4.10
  * linux-doc: Add symlinks to current documentation
  * Update to 4.14.0-1
  * linux-image: Add back-dated NEWS about AppArmor introduction

linux-latest (86) unstable; urgency=medium

  * Add myself to Uploaders
  * Update to

--- a/debian/templates/control.image-dbg.latest.in
+++ b/debian/templates/control.image-dbg.latest.in
@@ -1,4 +1,4 @@
-Package: linux-image@localversion@-dbg
+Package: linux-image@source_suffix@@localversion@-dbg
 Depends: linux-image-@abiname@@localversion@-dbg, ${misc:Depends}
 Provides: linux-latest-image-dbg
 Description: Debugging symbols for Linux @flavour@ configuration (meta-package)
