--- a/debian/templates/control.headers.latest.in
+++ b/debian/templates/control.headers.latest.in
@@ -1,4 +1,4 @@
-Package: linux-headers@localversion@
+Package: linux-headers@source_suffix@@localversion@
 Depends: linux-headers-@abiname@@localversion@, ${misc:Depends}
 Description: Header files for Linux @flavour@ configuration (meta-package)
  This package depends on the architecture-specific header files for the latest
