--- a/debian/templates/lintian-overrides.image-dbg.in
+++ b/debian/templates/lintian-overrides.image-dbg.in
@@ -1,2 +1,2 @@
-linux-image-@flavour@-dbg: wrong-section-according-to-package-name linux-image-@flavour@-dbg => debug
-linux-image-@flavour@-dbg: debug-package-should-be-priority-extra linux-image-@flavour@-dbg
+linux-image@source_suffix@-@flavour@-dbg: wrong-section-according-to-package-name linux-image@source_suffix@-@flavour@-dbg => debug
+linux-image@source_suffix@-@flavour@-dbg: debug-package-should-be-priority-extra linux-image@source_suffix@-@flavour@-dbg
