Import Debian version 80+deb9u9
linux-latest (80+deb9u9) stretch; urgency=medium

  * Update to 4.9.0-11

linux-latest (80+deb9u8) stretch; urgency=medium

  * Update to 4.9.0-10

linux-latest (80+deb9u7) stretch; urgency=medium

  * Update to 4.9.0-9

linux-latest (80+deb9u6) stretch-security; urgency=high

  * Update to 4.9.0-8

linux-latest (80+deb9u5) stretch; urgency=medium

  * Update to 4.9.0-7

linux-latest (80+deb9u4) stretch-security; urgency=high

  * Update to 4.9.0-6

linux-latest (80+deb9u3) stretch-security; urgency=high

  * Update to 4.9.0-5

linux-latest (80+deb9u2) stretch; urgency=medium

  * Update to 4.9.0-4

linux-latest (80+deb9u1) stretch; urgency=medium

  * Revert changes to debug symbol meta-packages (Closes: #866691)

linux-latest (80) unstable; urgency=medium

  * Re-introduce xen-linux-system-amd64 *again* as transitional package
    (Closes: #857039)
  * Update to 4.9.0-3

linux-latest (79) unstable; urgency=medium

  * Update to 4.9.0-2

linux-latest (78) unstable; urgency=medium

  * debian/rules: Use dpkg-parsechangelog -S option to select fields
  * linux-image: Delete NEWS for version 76 about vsyscall changes, now
    reverted
  * Update to 4.9.0-1

linux-latest (77) unstable; urgency=medium

  * Update to 4.8.0-2
  * Use debhelper compatibility level 9
  * Re-introduce xen-linux-system packages, accidentally dropped in version 75

linux-latest (76) unstable; urgency=medium

  * Update to 4.8.0-1
  * linux-image-{686-pae,amd64}: Delete old NEWS
  * linux-image: Add back-dated NEWS for conntrack helpers change in Linux 4.7
    (Closes: #839632)
  * linux-image: Add NEWS for security hardening config changes for Linux 4.8

linux-latest (75) unstable; urgency=medium

  * Update to 4.7.0-1
  * Rename and move debug symbol meta-packages to the debug archive
  * debian/control: Set priority of transitional packages to extra
  * debian/control: Update Standards-Version to 3.9.8; no changes needed

linux-latest (74) unstable; urgency=me

--- a/debian/templates/control.doc.latest.in
+++ b/debian/templates/control.doc.latest.in
@@ -1,4 +1,4 @@
-Package: linux-doc@source_suffix@
+Package: linux-doc
 Section: doc
 Architecture: all
 Depends: linux-doc-@upstreamversion@, ${misc:Depends}
