--- a/debian/templates/lintian-overrides.source.in
+++ b/debian/templates/lintian-overrides.source.in
@@ -1,1 +1,1 @@
-@source_package@ source: dbg-package-missing-depends linux-image@source_suffix@-@flavour@-dbg
+linux-latest source: dbg-package-missing-depends linux-image-@flavour@-dbg
