--- a/debian/templates/control.image-dbg.latest.in
+++ b/debian/templates/control.image-dbg.latest.in
@@ -1,4 +1,4 @@
-Package: linux-image@source_suffix@@localversion@-dbg
+Package: linux-image@localversion@-dbg
 Depends: linux-image-@abiname@@localversion@-dbg, ${misc:Depends}
 Provides: linux-latest-image-dbg
 Description: Debugging symbols for Linux @flavour@ configuration (meta-package)
