--- a/debian/templates/control.image.latest.type-standalone.in
+++ b/debian/templates/control.image.latest.type-standalone.in
@@ -1,4 +1,4 @@
-Package: linux-image@source_suffix@@localversion@
+Package: linux-image@localversion@
 Depends: linux-image-@abiname@@localversion@, ${misc:Depends}
 Provides: linux-latest-modules-@abiname@@localversion@
 Description: Linux for @class@ (meta-package)
