--- a/debian/templates/control.tools.latest.in
+++ b/debian/templates/control.tools.latest.in
@@ -1,4 +1,4 @@
-Package: linux-perf@source_suffix@
+Package: linux-perf
 Architecture: all
 Depends: linux-perf-@upstreamversion@, ${misc:Depends}
 Description: Performance analysis tools for Linux (meta-package)
